--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,4 @@
 # Diese .gitignore-Datei wurde von Microsoft(R) Visual Studio automatisch erstellt.
 ################################################################################
 
-/.vs
-/src/.vs/StreamrNodeManager
-/src/bin
-/src/obj
+/.vs/StreamrNodeManager
